--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
-notifications:
-  disabled: true
+sudo: false
+cache: bundler
 rvm:
-  - 1.9.2
   - 1.9.3
-  - 2.0.0
-  - 2.1.0
+  - 2.0.0-p647
+  - 2.1.7
+  - 2.2.3
   - jruby
