--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ['2.7', '3.0', '3.1', 'jruby-head'] # TODO: fix '3.2',
+        ruby-version: ['2.7', '3.0', '3.1', '3.2', 'jruby-head']
 
     steps:
       - uses: actions/checkout@v2
