Refactor expand_font_shorthand
I used https://www.w3.org/TR/CSS21/fonts.html#propdef-font to create the scanner

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -41,6 +41,9 @@ Metrics/ModuleLength:
 Metrics/PerceivedComplexity:
   Enabled: false
 
+Style/AccessModifierDeclarations:
+  Enabled: false
+
 Style/AndOr:
   Enabled: false
 
