--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,5 @@
 require:
+  - rubocop-performance
   - rubocop-rake
 
 AllCops:
@@ -40,6 +41,13 @@ Metrics/ModuleLength:
 
 Metrics/PerceivedComplexity:
   Enabled: false
+
+# TODO: Progressively fix performance offences and remove this setting
+Performance:
+  Enabled: false
+
+Performance/RegexpMatch:
+  Enabled: true
 
 Style/AndOr:
   Enabled: false
