--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ['3.0', '3.1', '3.2', '3.3', '3.4', 'jruby']
+        ruby-version: ['3.3', '3.4', 'jruby']
 
     steps:
       - uses: actions/checkout@v4
@@ -35,7 +35,7 @@ jobs:
 
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.0' # lowest supported Ruby version
+          ruby-version: '3.3' # lowest supported Ruby version
           bundler-cache: true
 
       - run: bundle exec rake rubocop
